<resources>
    <string name="advertising_off">Not advertising</string>
    <string name="advertising_unavailable">BLE advertising not available</string>
    <string name="advertising_status">Advertising Status: %1$s</string>
    <string name="app_name">FishFinder Simulator</string>
    <string name="battery">Battery: %1$.1f%%</string>
    <string name="bt_advertising_unsupported">Simulator closing: BLE Advertising Not Supported</string>
    <string name="bt_not_enabled">Simulator closing: Bluetooth is Not Enabled</string>
    <string name="bt_not_supported">Simulator closing: Bluetooth Not Supported</string>
    <string name="depth">Depth: %1$.2fm</string>
    <string name="devices_connected">%1$d devices connected: %2$s</string>
    <string name="fish_depth">Fish depth: %1$.1fm</string>
    <string name="fish_strength">Fish strength: %1$.1f</string>
    <string name="hz">Hz</string>
    <string name="menu_disconnect_devices">Disconnect Devices</string>
    <string name="noise">Noise %1$s</string>
    <string name="range">Range %1$dm</string>
    <string name="sample_count">Samples %1$d</string>
    <string name="sonar_frequency">Sonar Freq:</string>
    <string name="freq">Hz (%1$.2gHz)</string>
    <string name="location_frequency">Location Freq:</string>
    <string name="sensitivity">Sensitivity %1$d</string>
    <string name="strength">Strength: %1$.1f</string>
    <string name="temperature">Temperature: %1$.1f°C</string>
    <string name="dry">Dry</string>
    <string name="lat">Lat: %.5g</string>
    <string name="lon">Lon: %.5g</string>
    <string name="silent">Silent</string>
    <string-array name="sampleSources">
        <item>Demo</item>
        <item>Wave</item>
        <item>Flatline</item>
    </string-array>
</resources>
